yare-tests-ui/tests/fail/not_a_fn.rs
use yare::parameterized;

#[parameterized(
    case1 = { 0 },
)]
struct A;

fn main() {}
