yare-tests-ui/tests/fail/not_a_fn.stderr
error: expected `fn`
 --> tests/fail/not_a_fn.rs:6:1
  |
6 | struct A;
  | ^^^^^^
